--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .hover-base {
+    @apply rounded-full text-black transition duration-300 ease-in-out hover:bg-regal-blue hover:text-white;
+  }
+
+  .datecell-btn {
+    @apply w-12 h-12 flex justify-center items-center text-center relative;
+  }
+}
