--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #d6e1e5;
+}
+
 @layer components {
   .hover-base {
     @apply rounded-full text-black transition duration-300 ease-in-out hover:bg-bright-blue hover:text-white;
