--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,6 +14,10 @@ body {
   .datecell-btn {
     @apply w-12 h-12 flex justify-center items-center text-center relative;
   }
+
+  .btn-selected {
+    @apply rounded-full bg-bright-blue text-white;
+  }
 }
 
 @font-face {
